--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.00MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.21MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-226.1KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-2.95MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.77MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.73MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.01MB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇨🇦 加拿大-459.2KB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-1.53MB/s(Youtube:不良林), server: 38.143.66.20, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-502.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-242.1KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-1.52MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-365.1KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
   - {name: 🇨🇳 中国-352.6KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-319.3KB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-439.7KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-226.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-459.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-502.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-242.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-365.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-319.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-439.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-226.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-459.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-502.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-242.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-365.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-319.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-439.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-226.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-459.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-502.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-242.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-365.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-319.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-439.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-226.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-459.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-502.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-242.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-365.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-319.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-439.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-226.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-459.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-502.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-242.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-365.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-319.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-439.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-226.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-459.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-502.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-242.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-365.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-319.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-439.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-226.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-459.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-502.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-242.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-365.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-319.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-439.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
