--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇨🇦 加拿大-1.20MB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇫🇷 法国-1.58MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
+  - {name: 🇸🇬 新加坡-1.78MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-768.9KB/s(Youtube:不良林), server: 38.143.66.20, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇬🇧 英国-565.3KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇦 加拿大-459.2KB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-4.79MB/s(Youtube:不良林), server: 154.17.25.101, port: 63163, type: ss, cipher: aes-256-gcm, password: !<str> 49231199}
-  - {name: 🇨🇦 加拿大-684.2KB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-5.69MB/s(Youtube:不良林), server: 80.251.208.30, port: 22223, type: vmess, uuid: 5ce411c8-da98-44f5-ac1b-3b32ccdd8ce7, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /echo, ws-headers: {Host: 80.251.208.30}}
-  - {name: 🇺🇸 美国-319.3KB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-439.7KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇦 加拿大-218.3KB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-1.13MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-538.8KB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇩🇪 德国-1.59MB/s(Youtube:不良林), server: 162.55.231.78, port: 443, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇺🇸 美国-202.6KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-531.4KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-572.9KB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-213.6KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.58MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-768.9KB/s(Youtube:不良林)
       - 🇬🇧 英国-565.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-459.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-684.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-319.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-439.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-218.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-538.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-202.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-531.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-572.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-213.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.58MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-768.9KB/s(Youtube:不良林)
       - 🇬🇧 英国-565.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-459.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-684.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-319.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-439.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-218.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-538.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-202.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-531.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-572.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-213.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.58MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-768.9KB/s(Youtube:不良林)
       - 🇬🇧 英国-565.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-459.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-684.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-319.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-439.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-218.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-538.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-202.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-531.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-572.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-213.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.58MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-768.9KB/s(Youtube:不良林)
       - 🇬🇧 英国-565.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-459.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-684.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-319.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-439.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-218.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-538.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-202.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-531.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-572.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-213.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.58MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-768.9KB/s(Youtube:不良林)
       - 🇬🇧 英国-565.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-459.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-684.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-319.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-439.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-218.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-538.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-202.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-531.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-572.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-213.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.58MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-768.9KB/s(Youtube:不良林)
       - 🇬🇧 英国-565.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-459.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-684.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-319.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-439.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-218.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-538.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-202.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-531.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-572.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-213.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.58MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-768.9KB/s(Youtube:不良林)
       - 🇬🇧 英国-565.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-459.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.79MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-684.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-319.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-439.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-218.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-538.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-202.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-531.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-572.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-213.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
