--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-284.7KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-5.74MB/s(Youtube:不良林), server: 80.251.208.30, port: 22223, type: vmess, uuid: 5ce411c8-da98-44f5-ac1b-3b32ccdd8ce7, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /echo, ws-headers: {Host: 80.251.208.30}}
-  - {name: 🇺🇸 美国-1.35MB/s(Youtube:不良林), server: 38.143.66.20, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇯🇵 日本-1.75MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇺🇸 美国-220.5KB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇦 加拿大-834.3KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-702.9KB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇨🇳 中国-377.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.15MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
+  - {name: 🇺🇸 美国-889.6KB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-250.4KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇦 加拿大-281.8KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-231.4KB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇫🇷 法国-314.4KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-225.7KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-284.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-220.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-834.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-702.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-377.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-889.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-250.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-281.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-231.4KB/s(Youtube:不良林)
       - 🇫🇷 法国-314.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-225.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-284.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-220.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-834.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-702.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-377.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-889.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-250.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-281.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-231.4KB/s(Youtube:不良林)
       - 🇫🇷 法国-314.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-225.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-284.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-220.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-834.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-702.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-377.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-889.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-250.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-281.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-231.4KB/s(Youtube:不良林)
       - 🇫🇷 法国-314.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-225.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-284.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-220.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-834.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-702.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-377.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-889.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-250.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-281.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-231.4KB/s(Youtube:不良林)
       - 🇫🇷 法国-314.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-225.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-284.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-220.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-834.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-702.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-377.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-889.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-250.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-281.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-231.4KB/s(Youtube:不良林)
       - 🇫🇷 法国-314.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-225.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-284.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-220.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-834.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-702.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-377.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-889.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-250.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-281.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-231.4KB/s(Youtube:不良林)
       - 🇫🇷 法国-314.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-225.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-284.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-220.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-834.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-702.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-377.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-889.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-250.4KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-281.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-231.4KB/s(Youtube:不良林)
       - 🇫🇷 法国-314.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-225.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
